# bilgamesh

./: LICENSE  Makefile.am  README.md  configure.ac
src/: bgm_action.cc  bgm_board.cc  bgm_get_occupied_positions.cc  bgm_get_reverse_bitpairs.cc  bgm_hrki.cc  bgm_internal.cc  bgm_obk.cc  bgm_position_to_row_col.cc  bgm_strategy_monte_carlo.cc  bgm_strategy_random.cc  bgm_string_to_board.cc  prep_bgm_z.sh
src/include/: bilgamesh_internal.hh
src/test/: bgm_action-1.cc  bgm_board-1.cc  bgm_board-2.cc  bgm_board-3.cc  bgm_hrki-1.cc  bgm_hrki_util.cc  bgm_obk_util.cc  bgm_strategy_monte_carlo-1.cc  bgm_strategy_monte_carlo-2.cc  bgm_strategy_monte_carlo-3.cc  bgm_strategy_random-1.cc
